--- a/css/main-1.6.css
+++ b/css/main-1.6.css
@@ -303,9 +303,8 @@ section {
 }
 
 section h1 {
-
-    font-family: "EdwardianScrAltITCTT", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    font-size: 2.6em;
+    font-family: 'VT323', cursive;
+    font-size: 1.6em;
 
 }
 section h2 {
